将任务一的内容合并进来
一些微小的修改以及将任务一的代码合并进来。

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <!--index.wxml-->
-<view>
+<view class = "initial">
   <button bindtap='actionSheetTap'>
     <image class = "cherry" src='../../image/cherry-blossom.jpg'></image>
     <!--image src='../../image/cherry-blossom.jpg'></image-->
