--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -19,3 +19,13 @@
 .usermotto {
   margin-top: 200px;
 }
+.initial{
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  top: -10%;
+}
